--- a/index.html
+++ b/index.html
@@ -1229,18 +1229,18 @@
 							<div class='col-xs-6 text-right' >
 								<ul class='footer-social' >
 									<li>
-										<a href='#' >
+										<a href='https://www.facebook.com/jeet.joshi.988' >
 											<i class='ion-social-facebook' ></i>
 										</a>
 									</li>
 									<li>
-										<a href='#' >
+										<a href='https://github.com/JeetJoshi' >
 											<i class='ion-social-github' ></i>
 										</a>
 									</li>
 									<li>
-										<a href='#' >
-											<i class='ion-social-linkedin' ></i>
+										<a href='https://www.linkedin.com/in/jeet-joshi-292979188/'  >
+											<i class='ion-social-linkedin'  ></i>
 										</a>
 									</li>
 								</ul>
