--- a/work.html
+++ b/work.html
@@ -102,7 +102,7 @@
 							<h4>Info</h4>
 							
 							<p>
-								It's a AI based Personal Assistant.You can speak wikipedia + query to get information from wikipedia,.......,you can open youtube.......,google........,instagram........,facebook........,and amazone........................................!,you can play music,........also ask time...........,you can play martin garrix songs or search any song in gaana or youtube.......,also you can get updets of cricket an other news.........,you can also get information about the weather of the perticular city............andalsofindrestaurents near to you and many more................
+								It's a AI based Personal Assistant.You can speak wikipedia + query to get information from wikipedia,.......,you can open youtube.......,google........,instagram........,facebook........,and amazone........................................!,you can play music,........also ask time...........,you can play martin garrix songs or search any song in gaana or youtube.......,also you can get updets of cricket an other news.........,you can also get information about the weather of the perticular city............also find restaurents near to you and many more................
 							</p>
 							
 						</div>	
