--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class='no-js' >
 	
 	<head>
+		<meta name="google-site-verification" content="k3Qq2Sc6vzj4dg07Y6cLswGyumNHLHjvfIobuj-8M9E" />
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
